# stickers

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  package-lock.json
android-arch-sticker/Android/: build.gradle
android-arch-sticker/Android/app/: build.gradle
android-arch-sticker/Android/app/src/main/: AndroidManifest.xml
android-arch-sticker/Android/app/src/main/assets/: contents.json
android-arch-sticker/Android/app/src/main/cpp/: CMakeLists.txt
android-arch-sticker/Android/app/src/main/cpp/jni/: ConvertSticker.cpp  CropMedia.cpp  sticker.cpp
android-arch-sticker/Android/app/src/main/cpp/jni/exception/: HandlerJavaException.cpp  HandlerJavaException.h  HandlerJavaException.hpp
android-arch-sticker/Android/app/src/main/cpp/jni/raii/: AVBufferDeleter.h  AVBufferDeleter.hpp  AVBufferDestroyer.hpp  AVCodecContextDeleter.h  AVCodecContextDeleter.hpp  AVCodecContextDestroyer.hpp  AVFormatContextDeleter.hpp  AVFormatContextDestroyer.hpp  AVFrameDeleter.h  AVFrameDeleter.hpp  AVFrameDestroyer.hpp  SwsContextDeleter.hpp  SwsContextDestroyer.hpp  WebPAnimEncoderDeleter.hpp  WebPDataDeleter.h  WebPDataDeleter.hpp  WebpAnimEncoderDestroyer.hpp  WebpDataDestroyer.hpp  WebpDemuxerPtr.hpp  WebpIteratorPtr.hpp
android-arch-sticker/Android/app/src/main/cpp/jni/service/: ProcessFramesToFormat.cpp  ProcessFramesToFormat.h  ProcessFramesToFormat.hpp  ProcessInputMedia.cpp  ProcessInputMedia.hpp  ProcessWebpToAvFrames.cpp  ProcessWebpToAvFrames.hpp  WebpAnimationConverter.cpp  WebpAnimationConverter.h  WebpAnimationConverter.hpp
android-arch-sticker/Android/app/src/main/res/anim/: fade_enter.xml  fade_exit.xml  popup_bounce_enter.xml
android-arch-sticker/Android/app/src/main/res/drawable/: background_button_center.xml  background_dialog_alert.xml  background_drag_handle.xml  background_invalid_pack.xml  background_menu_dropdown.xml  background_rounded_button_open_gallery.xml  background_side_border.xml  background_slide_border.xml  background_sticker_animated_pack_indicator.xml  background_toolbar_wings.xml  crop_overlay_frame.xml  crop_overlay_hole.xml  dialog_alert_background.xml  ic_add_circle_24px.xml  ic_autoplay_24px.xml  ic_edit_24px.xml  ic_image_gallery.xml  ic_reload.xml  ic_stop_circle_24px.xml  ic_trash_24px.xml  rounded_container_bg.xml  rounded_toolbar_background.xml
android-arch-sticker/Android/app/src/main/res/layout/: activity_create_sticker_pack.xml  activity_preview_invalid_sticker.xml  activity_sticker_editor.xml  activity_sticker_pack_details.xml  activity_sticker_pack_list.xml  activity_stickerpack_details.xml  activity_stickerpack_info.xml  activity_stickerpack_list.xml  button_add_new_sticker.xml  button_invalid_item_preview.xml  container_invalid_sticker.xml  container_stickerpack.xml  container_thumbnail_media.xml  dialog_alert_error_submit_whatsapp.xml  dialog_alert_input.xml  dialog_fragment_recyclerview_select_media.xml  dialog_invalid_sticker.xml  dialog_invalid_sticker_pack.xml  dialog_invalid_stickers.xml  dialog_metadata_pack.xml  dialog_metadata_stickerpack.xml  dialog_permission_request.xml  dialog_permission_settings.xml  dropdown_custom_menu.xml  dropdown_type_stickerpack.xml  frames_timeline_video.xml  invalid_stickers_list_item.xml  preview_sticker_icon_list.xml  sticker_packs_list_item.xml
android-arch-sticker/Android/app/src/main/res/values/: colors.xml  colors_catppuccin.xml  dimens.xml  donottranslate.xml  strings.xml  styles.xml  styles_components.xml
android-arch-sticker/Android/app/src/main/res/values-pt-rBR/: strings.xml
app-android-stickers/Android/: .gitattributes  build.gradle
app-android-stickers/Android/app/: build.gradle
app-android-stickers/Android/app/src/cpp/: com_vinicius_sticker_domain_libs_ConvertToWebp.h
app-android-stickers/Android/app/src/main/: AndroidManifest.xml
app-android-stickers/Android/app/src/main/assets/: contents.json
app-android-stickers/Android/app/src/main/cpp/: Android.mk  CMakeLists.txt  main.c  sticker.cpp
app-android-stickers/Android/app/src/main/cpp/jni/: sticker.cpp
app-android-stickers/Android/app/src/main/cpp/jni/exception/: HandlerException.cpp  HandlerException.h  HandlerJavaException.cpp  HandlerJavaException.h
app-android-stickers/Android/app/src/main/cpp/jni/raii/: AVBufferDeleter.h  AVCodecContextDeleter.h  AVFormatContextDeleter.h  AVFrameDeleter.h  SwsContextDeleter.h  WebPAnimEncoderDeleter.h  WebPDataDeleter.h
app-android-stickers/Android/app/src/main/cpp/jni/service/: ProcessFramesToFormat.cpp  ProcessFramesToFormat.h  ResizeCropFrame.cpp  ResizeCropFrame.h  WebpAnimationConverter.cpp  WebpAnimationConverter.h
app-android-stickers/Android/app/src/main/res/anim/: popup_bounce_enter.xml  popup_bound_exit.xml  popup_enter.xml  popup_exit.xml  slide_in_bottom.xml  slide_out_bottom.xml
app-android-stickers/Android/app/src/main/res/drawable/: background_handler.xml  background_menu_dropdown.xml  checkbox_container_image_background.xml  dialog_alert_background.xml  dialog_background.xml  drag_handle_container_rounded_background.xml  ic_add_circle_24px.xml  ic_autoplay_24px.xml  image_view_border.xml  (+3 more)
bot-sticker-whatsapp/: .env.model  .eslintrc.json  .gitattributes  .gitignore  .prettierrc  package-lock.json  package.json  tsconfig.json
bot-sticker-whatsapp/resource/db/: table.sql
bot-sticker-whatsapp/src/: index.ts
bot-sticker-whatsapp/src/command/: Command.ts
bot-sticker-whatsapp/src/command/context/: EndStickerLotsContext.ts  ReceiveImagesToLotsContext.ts  StartStickerContext.ts  StartStickerLotsContext.ts
bot-sticker-whatsapp/src/command/task/: StartStickerListener.ts
bot-sticker-whatsapp/src/core/: StartBot.ts  StartSqlite.ts
bot-sticker-whatsapp/src/data/: GetAllStickers.ts  GetStickerByJid.ts  SaveSticker.ts
bot-sticker-whatsapp/src/logs/: Logger.ts
bot-sticker-whatsapp/src/services/: DownloadSticker.ts  SendSticker.ts  SendStickersLots.ts
bot-sticker-whatsapp/src/types/: StickerRow.ts
docs/: LICENSE-COMMENTS.md
licenses/: FFMEPG.md  LIBWEBP.md  VNCL-LICENSE  VNCL-LICENSE.md  WHATSAPP-LICENSE.md
(+581 files in other folders)
